! Fix alignments issue due to font switch

--- a/packages/vapor/less/controls/filterBox.less
+++ b/packages/vapor/less/controls/filterBox.less
@@ -37,7 +37,7 @@
             display: inline-block;
             position: absolute;
             right: 10px;
-            top: 6px;
+            top: 8px;
 
             &.hide {
                 display: none;
